[package]
name = "mac-minitables"
version = "0.1.0"
authors = ["Daan Sprenkels <daan@dsprenkels.com>"]
description = "Lookup table tool for reversing MAC address hashes"
edition = "2018"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[dependencies]
env_logger = "0.8"
lazy_static = "1"
log = "0.4"
quick-error = "2.0"
regex = "1"
sha2 = "0.9"

[dependencies.clap]
version = "2"
default-features = false
features = [ "suggestions", "color" ]

[dev-dependencies]
quickcheck = "1.0"
